--- a/1-dynamic-styles/src/app/app.component.html
+++ b/1-dynamic-styles/src/app/app.component.html
@@ -1,4 +1,10 @@
-<h1>
-  My quote
-</h1>
-<app-quote></app-quote>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <h1>
+        My quote
+      </h1>
+      <app-quote></app-quote>
+    </div>
+  </div>
+</div>
