--- a/1-dynamic-styles/src/app/quote/quote.component.scss
+++ b/1-dynamic-styles/src/app/quote/quote.component.scss
@@ -1,3 +1,14 @@
 h1 {
   color: red;
 }
+
+:host {
+  display: block;
+  border: 1px solid black;
+  padding: 20px;
+}
+
+// #quote {
+//   border: 1px solid black;
+//   padding: 20px;
+// }
