--- a/1-dynamic-styles/src/app/app.component.html
+++ b/1-dynamic-styles/src/app/app.component.html
@@ -4,7 +4,7 @@
       <h1>
         My quote
       </h1>
-      <app-quote></app-quote>
+      <app-quote class="favourite"></app-quote>
       <app-author></app-author>
     </div>
   </div>
