--- a/1-dynamic-styles/src/app/app.component.html
+++ b/1-dynamic-styles/src/app/app.component.html
@@ -4,8 +4,16 @@
       <h1>
         My quote
       </h1>
-      <app-quote class="favourite"></app-quote>
-      <app-author></app-author>
+      <div class="interesting">
+        <app-quote class="favourite"></app-quote>
+        <app-author></app-author>
+      </div>
+      <div class="boring">
+        <div id="very-boring">
+          <app-quote></app-quote>
+          <app-author></app-author>
+        </div>
+      </div>
     </div>
   </div>
 </div>
