--- a/2-prj-styling-start/src/app/projects/projects.component.html
+++ b/2-prj-styling-start/src/app/projects/projects.component.html
@@ -6,39 +6,24 @@
 <hr>
 <div class="row">
   <div class="col-xs-12">
-    <button
-      class="btn btn-default"
-      *ngIf="!createNew"
-      (click)="createNew = true">Create new Project</button>
-    <button
-      class="btn btn-danger"
-      *ngIf="createNew"
-      (click)="createNew = false">Cancel</button>
+    <button class="btn btn-default" *ngIf="!createNew" (click)="createNew = true">Create new Project</button>
+    <button class="btn btn-danger" *ngIf="createNew" (click)="createNew = false">Cancel</button>
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12" style="overflow: hidden">
-    <app-new-project
-      *ngIf="createNew"
-      (projectCreated)="onProjectCreated($event)"
+    <app-new-project *ngIf="createNew" (projectCreated)="onProjectCreated($event)"
       (creationCancelled)="createNew = false"></app-new-project>
   </div>
 </div>
 <hr>
 <div class="row">
   <div class="col-xs-12">
-    <div
-      class="loading-bar"
-      *ngIf="!projects">
-      <div
-        class="loading-bar-element"
-        *ngIf="progress != 'finished'"></div>
+    <div class="loading-bar" *ngIf="!projects">
+      <div class="loading-bar-element" *ngIf="progress != 'finished'"></div>
     </div>
-    <app-project
-      *ngFor="let prj of projects; let i = index"
-      [project]="prj"
-      (statusUpdated)="onStatusUpdated($event, i)"
-      (projectDeleted)="onProjectDeleted(i)"
-      (click)="markedPrjIndex = i"></app-project>
+    <app-project *ngFor="let prj of projects; let i = index" [project]="prj" [ngClass]="{marked: markedPrjIndex === i}"
+      (statusUpdated)="onStatusUpdated($event, i)" (projectDeleted)="onProjectDeleted(i)" (click)="markedPrjIndex = i">
+    </app-project>
   </div>
 </div>
