--- a/3-css-animations/src/app/app.component.css
+++ b/3-css-animations/src/app/app.component.css
@@ -1,4 +1,4 @@
-div {
+#div1 {
   height: 100px;
   width: 100px;
   background-color: red;
@@ -7,4 +7,31 @@ div {
 
 .marked {
   width: 300px;
+}
+
+#div2 {
+  height: 100px;
+  width: 200px;
+  background-color: green;
+}
+
+.animate {
+  animation: moved 4s ease-out forwards;
+}
+
+@keyframes moved {
+  0% {
+    transform: translateX(0) scale(1);
+  }
+  50% {
+    transform: translateX(300px) scale(1.2);
+  }
+  75% {
+    transform: translateX(400px) scale(1);
+    opacity: 0.3;
+  }
+  100% {
+    transform: translateX(400px) scale(1);
+    opacity: 0.1;
+  }
 }
