--- a/2-prj-styling-start/src/app/projects/projects.component.css
+++ b/2-prj-styling-start/src/app/projects/projects.component.css
@@ -4,6 +4,19 @@
 
 .marked {
   border: 2px solid blue;
+  animation: marked 0.3s ease-out forwards;
+}
+
+@keyframes marked {
+  0%{
+    transform: scale(1);
+  }
+  50%{
+    transform: scale(1.05);
+  }
+  100%{
+    transform: scale(1);
+  }
 }
 
 .loading-bar {
