--- a/4-angular-animations/src/app/app.component.html
+++ b/4-angular-animations/src/app/app.component.html
@@ -1,1 +1,1 @@
-<div (click)="onClickSimple()" [@clickedState]="clickInfo"></div>
+<div (click)="onClickSimple()" (mousedown)="clickInfo = 'mousedown'" [@clickedState]="clickInfo"></div>
