--- a/4-angular-animations/src/app/app.component.html
+++ b/4-angular-animations/src/app/app.component.html
@@ -1,1 +1,4 @@
 <div (click)="onClickSimple()" (mousedown)="clickInfo = 'mousedown'" [@clickedState]="clickInfo"></div>
+
+
+<p (click)="paragraphClick = 'clicked'" [@clickedState]="paragraphClick">Some text</p>
