--- a/2-prj-styling-start/src/app/project/project.component.css
+++ b/2-prj-styling-start/src/app/project/project.component.css
@@ -2,16 +2,16 @@
   display: block;
   border: 1px solid gray;
   border-radius: 3px;
-  padding: 15px;
+  /* padding: 15px; */
   background: #ececec;
   margin: 15px 0;
   box-shadow: 3px 3px 2px #ccc;
-  transition: border-color 0.3s ease-in-out;
+  /* transition: border-color 0.3s ease-in-out; */
 }
 
-:host(.marked) {
+/* :host(.marked) {
   padding: 14px;
-}
+} */
 
 :host(.inactive) {
   color: #ccc;
