--- a/5-advanced-animations/src/app/app.component.html
+++ b/5-advanced-animations/src/app/app.component.html
@@ -4,3 +4,8 @@
 <button (click)="width = width - 50">Shrink</button>
 <button (click)="animate = true">Animate me</button>
 <p [@animateState]="animate? 'animated': 'noAnimation'" [ngStyle]="{'width.px': width}">Shrink me</p>
+
+<hr>
+
+<button (click)="onAddElement()">Add Element</button>
+<div class="test-result" @showState *ngFor="let testResult of testResults">{{testResult}}</div>
