--- a/5-advanced-animations/src/app/app.component.html
+++ b/5-advanced-animations/src/app/app.component.html
@@ -8,4 +8,4 @@
 <hr>
 
 <button (click)="onAddElement()">Add Element</button>
-<div class="test-result" @showState *ngFor="let testResult of testResults">{{testResult}}</div>
+<div class="test-result" @listState *ngFor="let testResult of testResults">{{testResult}}</div>
