--- a/2-prj-styling-start/src/app/projects/projects.component.html
+++ b/2-prj-styling-start/src/app/projects/projects.component.html
@@ -12,7 +12,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12" style="overflow: hidden">
-    <app-new-project *ngIf="createNew" (projectCreated)="onProjectCreated($event)"
+    <app-new-project *ngIf="createNew" @slideState (projectCreated)="onProjectCreated($event)"
       (creationCancelled)="createNew = false"></app-new-project>
   </div>
 </div>
