--- a/2-prj-styling-start/src/app/projects/projects.component.html
+++ b/2-prj-styling-start/src/app/projects/projects.component.html
@@ -22,8 +22,9 @@
     <div class="loading-bar" *ngIf="!projects">
       <div class="loading-bar-element" *ngIf="progress != 'finished'"></div>
     </div>
-    <app-project *ngFor="let prj of displayedProjects; let i = index" [project]="prj" @itemState
-      (@itemState.done)="onItemAnimated($event, i)" [@markedTrigger]="markedPrjIndex === i?'marked':'default'"
+    <app-project *ngFor="let prj of displayedProjects; let i = index" [project]="prj"
+      [@itemState]="createNew ? 'slidDown' : 'slidUp'" (@itemState.done)="onItemAnimated($event, i)"
+      [@markedTrigger]="markedPrjIndex === i?'marked':'default'"
       [ngClass]="{marked: markedPrjIndex === i, inactive: prj.status==='inactive'}"
       (statusUpdated)="onStatusUpdated($event, i)" (projectDeleted)="onProjectDeleted(i)" (click)="markedPrjIndex = i">
     </app-project>
