--- a/2-prj-styling-start/src/app/app.component.html
+++ b/2-prj-styling-start/src/app/app.component.html
@@ -2,12 +2,13 @@
   <div class="row">
     <div class="col-xs-12">
       <ul class="nav nav-pills">
-        <li role="presentation" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/">Projects</a></li>
+        <li role="presentation" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a
+            routerLink="/">Projects</a></li>
         <li role="presentation" routerLinkActive="active"><a routerLink="/users">Users</a></li>
       </ul>
     </div>
   </div>
-  <div class="row">
+  <div class="row" style="overflow: hidden">
     <div class="col-xs-12">
       <router-outlet></router-outlet>
     </div>
